BusOne/src/objects/Bookmark_vod__c.object
<CustomObject>
    <description>Object used to store saved sets of filters, display configurations, and sort settings.</description>
    <fields>
        <fullName>Display_Configuration_vod__c</fullName>
        <description>Field to hold the display configuration for the Bookmark. Format of the value is: CONTEXT::ATTRIBUTE::DETAIL_ATTRIBUTE</description>
        <label>Display Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Criteria_vod__c</fullName>
        <description>Field to hold the filter definitions for the Bookmark. Format is OBJECT_NAME.FIELD_NAME::OPERATOR::VALUE;;OBJECT_NAME.FIELD_NAME::OPERATOR::VALUE</description>
        <label>Field Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sort_Definition_vod__c</fullName>
        <description>Field to hold the column being sorted by in the Bookmark. Schedule views can only be sorted on one field. Format is one ObjectName.FieldName follwed by sort order, ASC or DESC. Example, &quot;Account.Formatted_Name_vod__c::ASC&quot;</description>
        <label>Sort Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bookmark</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookmarks</pluralLabel>
    <recordTypes>
        <fullName>Account_Schedule_vod</fullName>
        <active>true</active>
        <description>Record type indicating the filter settings are related to Account Views and Lists</description>
        <label>Account_Schedule_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cycle_Plan_Schedule_vod</fullName>
        <active>true</active>
        <description>Record type indicating the filter settings are related to Cycle Plan</description>
        <label>Cycle_Plan_Schedule_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sphere_Of_Influence_vod</fullName>
        <active>true</active>
        <description>Record type indicating the filter settings are related to the Sphere of Influence</description>
        <label>Sphere_Of_Influence_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>